# cliptown

./: .dockerignore  .gitignore  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODOS.md  cliptown.toml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  e2e-real-llm.yml  release.yml
bench/: baselines.json  check.mjs
crates/world/: Cargo.toml  build.rs
crates/world/benches/: world_bench.rs
crates/world/migrations/: 0001_initial.sql  0002_skills.sql  0003_operators.sql  0004_task_routing_preferences.sql  0005_task_cost_estimate.sql  0006_skill_files.sql  0007_skill_revisions.sql  0008_skill_global.sql  0009_operator_token_hash.sql  0010_peer_reviewer.sql  0011_blocking_deps.sql  0012_work_stealing.sql  0013_action_locks.sql  0014_self_reviewed_at.sql  0015_auto_recovery.sql
crates/world/seed/: town_default.json
crates/world/src/: action_locks.rs  agent_supervisor.rs  agent_tools.rs  api_skills.rs  api_startups.rs  api_tasks.rs  auth.rs  backend_catalog.rs  backup.rs  budget.rs  cmd_console.rs  cmd_worker.rs  config.rs  det.rs  emit.rs  execenv_gc.rs  health.rs  http.rs  lib.rs  loop_.rs  main.rs  mcp_dispatch.rs  mcp_http.rs  metrics.rs  move_sys.rs  path.rs  permissions.rs  persist.rs  presence.rs  proximity.rs  sandbox.rs  scheduler.rs  seed.rs  self_review.rs  skills.rs  state.rs  storage.rs  task_sm.rs  view.rs
crates/world/src/protocol/: mod.rs  schema_version.rs  ws_messages.rs
crates/world/tests/: action_locks.rs  agent_supervisor.rs  agent_tools.rs  api_skills.rs  api_startups.rs  api_tasks.rs  auto_recovery.rs  backend_catalog.rs  backup.rs  blocking_deps.rs  budget_thresholds.rs  config_smoke.rs  console_cmds.rs  console_emit.rs  cost_variance.rs  det_unit.rs  e2e_cafe.rs  e2e_directive_chain.rs  e2e_engineer_artifact.rs  e2e_force_actions.rs  e2e_isolation.rs  e2e_manager_accept.rs  e2e_permission_violation.rs  e2e_proposal_flow.rs  e2e_review_cycle.rs  health_integration.rs  http_smoke.rs  loop_smoke.rs  mcp_handlers.rs  mcp_http.rs  movement.rs  observability_artifacts.rs  path_unit.rs  permissions_property.rs  persist_smoke.rs  presence.rs  proximity.rs  sandbox_attacks.rs  scheduler.rs  seed_smoke.rs  (+10 more)
crates/world/tests/common/: mod.rs
crates/world/tests/fixtures/: fake_worker_clean_exit.sh  fake_worker_crash.sh  fake_worker_dump_args.sh  fake_worker_long_run.sh
docs/: AGENT.md  DEPLOY.md  OPERATOR.md
docs/observability/alerts/: cliptown.yml
docs/observability/grafana/: cliptown-overview.json
docs/observability/prometheus/: prometheus.yml
docs/superpowers/: ship-gate.md
docs/superpowers/plans/: 2026-05-07-cliptown-phase-0.md  2026-05-08-m5-chat-directive-emit.md  2026-05-11-codex-opencode-hook-bridge.md  2026-05-12-daemon-health-buckets.md  2026-05-12-real-bench-harness.md  2026-05-13-execenv-dirs.md  2026-05-13-skills-system.md
docs/superpowers/specs/: 2026-05-07-cliptown-design.md  2026-05-08-m5-chat-directive-emit-design.md  2026-05-09-real-llm-e2e-design.md  2026-05-11-codex-opencode-hook-bridge-design.md  2026-05-12-daemon-health-buckets-design.md  2026-05-12-real-bench-harness-design.md  2026-05-13-execenv-dirs-design.md  2026-05-13-phase-3-roadmap.md  2026-05-13-skills-broadcasts-and-ui-design.md  2026-05-13-skills-system-design.md  (+3 more)
e2e/real-llm/: package.json  tsconfig.json
scripts/: gc-execenv.sh  restore-from-snapshot.sh  smoke-ollama.sh  smoke-real-llm.sh
(+3 files in other folders)
