[package]
name = "cliptown-world"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
ts-rs.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[build-dependencies]
ts-rs.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
_ts_export = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "cliptown-world"
path = "src/main.rs"
